syntax = "proto3";
package micromango;
option go_package = "micromango/pkg/grpc/static";
import "share.proto";

service Static {
  rpc GetImage(GetImageRequest) returns (ImageResponse);
  rpc UploadThumbnail(UploadThumbnailRequest) returns (UploadImageResponse);
  rpc UploadPage(UploadPageRequest) returns (UploadImageResponse);
  rpc UploadProfilePicture(UploadProfilePictureRequest) returns (UploadImageResponse);
  rpc UploadProfileCover(UploadProfileCoverRequest) returns (UploadImageResponse);
}

message GetImageRequest {
  string imageId = 1;
}

message ImageResponse {
  bytes image = 1;
}

message UploadThumbnailRequest {
  string mangaId = 1;
  File thumbnail = 2;
}

message UploadPageRequest {
  string mangaId = 1;
  string chapterId = 2;
  File page = 3;
}

message UploadImageResponse {
  string imageId = 1;
}

message UploadProfilePictureRequest {
  string userId = 1;
  File picture = 2;
}

message UploadProfileCoverRequest {
  string userId = 1;
  File cover = 2;
}